Fix background overlay not stretching full-screen

--- a/css/styles.css
+++ b/css/styles.css
@@ -148,4 +148,14 @@ a, a:hover, a:visited, a:link {
     width: 100%!important;
     height: 100%!important;
   }
+  #wrapper div.fone {
+    background: none;
+  }
+  body::before {
+    position: absolute;
+    content: '';
+    width: 100%;
+    height: 100%;
+    background: rgb(95 191 255 / 7%);
+  }
 }
